--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,9 +30,50 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div id="hour" value = "8" class="time-block  hour row">8 AM 
+        <textarea class=" description"></textarea>
+        <button class="saveBtn">Save🔒</button>
+      </div>
+      <div class="time-block  hour row">9 AM 
+        <textarea class=" description"></textarea>
+        <button class="saveBtn">Save🔒</button>
+      </div>
+      <div class="time-block hour row">10 AM 
+        <textarea class=" description"></textarea>
+        <button class="saveBtn">Save🔒</button>
+      </div>
+      <div class="time-block hour row">11 AM 
+        <textarea class=" description"></textarea>
+        <button class="saveBtn">Save🔒</button>
+      </div>
+      <div class="time-block hour row">12 PM 
+        <textarea class="description"></textarea>
+        <button class="saveBtn">Save🔒</button>
+      </div>
+      <div class="time-block hour row">1 PM 
+        <textarea class=" description"></textarea>
+        <button class="saveBtn">Save🔒</button>
+      </div>
+      <div class="time-block hour row">2 PM 
+        <textarea class=" description"></textarea>
+        <button class="saveBtn">Save🔒</button>
+      </div>
+      <div class="time-block hour row">3 PM 
+        <textarea class=" description"></textarea>
+        <button class="saveBtn">Save🔒</button>
+      </div>
+      <div class="time-block hour row">4 PM 
+        <textarea class=" description"></textarea>
+        <button class="saveBtn">Save🔒</button>
+      </div>
+      <div class="time-block hour row">5 PM 
+        <textarea class="description"></textarea>
+        <button class="saveBtn">Save🔒</button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
